--- a/tests/atlocal.in
+++ b/tests/atlocal.in
@@ -1,17 +1,18 @@
-dnl Copyright (c) 2018 TK Chia
-dnl
-dnl This file is free software; you can redistribute it and/or modify it
-dnl under the terms of the GNU Lesser General Public License as published by
-dnl the Free Software Foundation; either version 3 of the License, or
-dnl (at your option) any later version.
-dnl
-dnl This program is distributed in the hope that it will be useful, but
-dnl WITHOUT ANY WARRANTY; without even the implied warranty of
-dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-dnl Lesser General Public License for more details.
-dnl
-dnl You should have received a copy of the GNU Lesser General Public License
-dnl along with this program; see the file COPYING3.LIB.  If not see
-dnl <http://www.gnu.org/licenses/>.
+# Copyright (c) 2018 TK Chia
+#
+# This file is free software; you can redistribute it and/or modify it
+# under the terms of the GNU Lesser General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Lesser General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public License
+# along with this program; see the file COPYING3.LIB.  If not see
+# <http://www.gnu.org/licenses/>.
 
 : ${DOSEMU='@DOSEMU@'}
+: ${CC='@CC@'}
